--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,1 +1,12 @@
-index.html.erb
+
+
+<h2>Here is a list of all restaurants</h2>
+
+<ol>
+  <% @restaurants.each do |restaurant| %>
+    <li> <%= link_to restaurant.name, restaurant_path(restaurant) %> </li>
+  <% end %>
+</ol>
+
+
+<%= link_to "Add a restaurant", new_restaurant_path, {class: "btn btn-primary"} %>
