--- a/app/views/restaurants/new.html.erb
+++ b/app/views/restaurants/new.html.erb
@@ -1,1 +1,30 @@
-new.html.erb
+
+<div class="col-md-8 col-md-offset-2">
+  <h2>Ajouter un Restaurant</h2>
+  <%= form_for [@restaurant] do |f| %>
+
+  <div class="form-group">
+    <%= f.label "Name of the restaurant" %>
+    <%= f.text_field :name, class:"form-control"%>
+  </div>
+
+  <div class="form-group">
+    <%= f.label "Address" %>
+    <%= f.text_field :address, class:"form-control" %>
+  </div>
+  <div class="form-group">
+    <%= f.label "Phone Number" %>
+    <%= f.text_field :phone_number, class:"form-control" %>
+  </div>
+  <div class="form-group">
+    <%= f.label "Category" %>
+  </div>
+  <div class="form-group">
+     <%= f.text_field :category, class:"form-control" %>
+  </div>
+    <%= f.submit "Créer un restaurant", class:"btn btn-success" %>
+  <% end %>
+  <br>
+  <%= link_to "Back to the Index", restaurants_path, {class: "btn btn-primary"} %>
+</div>
+
